<resources>
    <string name="app_name">SubwayRandomSandwich</string>
    <string name="make">만들기</string>
    <string name="menu">메뉴 : </string>
    <string name="bread">빵 : </string>
    <string name="cheese">치즈 : </string>
    <string name="sauce">소스 : </string>
    <string name="gohome">처음으로</string>
    <string name="info">설명</string>
    <string name="title_activity_nutrient_info">NutrientInfo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">서브웨이 랜덤 샌드위치</string>
    <string name="main_img">main_img</string>
    <string name="nutreint_info">영양\n정보</string>
    <string name="sandwich_img">sandwich_img</string>
</resources>